--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,15 @@
 .link {
    text-decoration: none;
 }
+.title {
+    color: var(--secondary-color);
+}
+.section-title {
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 36px;
+    line-height: 1.1;
+}
 /* Body */
 body {
     font-family: var(--primary-font);
@@ -41,9 +50,6 @@ body {
 }
 .logo-part {
    color: var(--primary-brand-color);
-}
-.logo.footer {
-   color: var(--light-color);
 }
 .nav-link {
    font-weight: 500;
@@ -83,4 +89,19 @@ background-color: var(--secondary-color);
 .hero-btn:hover,
 .hero-btn:focus {
 background-color: var(--pressed-state-color);
+}
+/* Features */
+.features-title {
+   font-weight: 500;
+   font-size: 20px;
+   line-height: 1.2;
+}
+
+/* Footer */
+.footer-section {
+   background-color: var(--secondary-color);
+   color: var(--light-color);
+}
+.logo.footer {
+   color: inherit;
 }
