--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@
 .section-title {
     color: var(--secondary-color);
     font-size: 36px;
-    line-height: 1.1;
+    line-height: 1.11;
     text-align: center;
     text-transform: capitalize;
 }
@@ -45,13 +45,13 @@ body {
 .logo {
    font-family: 'Raleway', sans-serif;
    font-size: 18px;
-   line-height: 1.2;
+   line-height: 1.17;
    letter-spacing: 0.03em;
    text-transform: uppercase;
-   color: var(--secondary-color);
-}
-.logo-part {
    color: var(--primary-brand-color);
+}
+.logo-part-header {
+   color: var(--secondary-color);
 }
 .nav-link {
    font-weight: 500;
@@ -74,7 +74,7 @@ background-color: var(--secondary-color);
 }
 .hero-title {
     font-size: 56px;
-    line-height: 1.1;
+    line-height: 1.07;
     text-align: center;
     color: var(--third-color);
 }
@@ -104,6 +104,6 @@ background-color: var(--pressed-state-color);
    background-color: var(--secondary-color);
    color: var(--light-color);
 }
-.logo.footer {
-   color: inherit;
+.logo-part-footer {
+   color: var(--light-color);
 }
