--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,111 @@
 /* Variables */
 :root {
-    --primary-brand-color: #4D5AE5;
-    --pressed-state-color: #404BBF;
-    --secondary-color: #2E2F42;
-    --third-color: #FFFFFF;
-    --success-color: #31D0AA;
+  --primary-brand-color: #4d5ae5;
+  --pressed-state-color: #404bbf;
+  --secondary-color: #2e2f42;
+  --third-color: #ffffff;
+  --success-color: #31d0aa;
 
-    --primary-text: #434455;
-    --accent-color: #E7E9FC;
-    --light-color: #F4F4FD;
+  --primary-text: #434455;
+  --accent-color: #e7e9fc;
+  --light-color: #f4f4fd;
 }
 /* Styles reset */
 .list {
-   list-style: none;
+  list-style: none;
 }
 .link {
-   text-decoration: none;
+  text-decoration: none;
 }
 /* Titles */
 .title {
-    color: var(--secondary-color);
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+  color: var(--secondary-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
 .section-title {
-    color: var(--secondary-color);
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    text-transform: capitalize;
+  color: var(--secondary-color);
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
 }
 /* Body */
 body {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--primary-text);
-    background-color: var(--third-color);
-   }
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text);
+  background-color: var(--third-color);
+}
 /* Header */
 .logo {
-   font-family: 'Raleway', sans-serif;
-   font-size: 18px;
-   line-height: 1.17;
-   letter-spacing: 0.03em;
-   text-transform: uppercase;
-   color: var(--primary-brand-color);
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-brand-color);
 }
 .logo-part-header {
-   color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 .nav-link {
-   font-weight: 500;
-   color: var(--secondary-color);
+  font-weight: 500;
+  color: var(--secondary-color);
+}
+.mail-tel {
+  font-style: normal;
 }
 .mail-link,
 .tel-link {
-   font-style: normal;
-   color: var(--primary-text);
+  color: inherit;
 }
 .nav-link:hover,
 .nav-link:focus,
 .mail-link:hover,
 .mail-link:focus {
-   color: var(--pressed-state-color);
+  color: var(--pressed-state-color);
 }
 /* Hero */
 .hero {
-background-color: var(--secondary-color);
+  background-color: var(--secondary-color);
 }
 .hero-title {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    color: var(--third-color);
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  color: var(--third-color);
 }
 .hero-btn {
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    cursor: pointer;
-    color: var(--third-color);
-    background-color: var(--primary-brand-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  cursor: pointer;
+  color: var(--third-color);
+  background-color: var(--primary-brand-color);
 }
 .hero-btn:hover,
 .hero-btn:focus {
-background-color: var(--pressed-state-color);
+  background-color: var(--pressed-state-color);
 }
 /* Team */
 .team {
-   background-color: var(--light-color);
+  background-color: var(--light-color);
 }
 .team-card-discription {
-   background-color: var(--third-color);
+  background-color: var(--third-color);
 }
 /* Footer */
 .footer-section {
-   background-color: var(--secondary-color);
-   color: var(--light-color);
+  background-color: var(--secondary-color);
+  color: var(--light-color);
 }
 .logo-part-footer {
-   color: var(--light-color);
+  color: var(--light-color);
 }
