--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,23 @@ body {
 .logo-part-footer {
   color: var(--light-color);
 }
+
+/* --------------------------------
+   Portfolio
+   -------------------------------- */
+.filter {
+}
+.filter-btn {
+}
+.projects {
+}
+.list-item {
+}
+.project-foto {
+}
+.project-title {
+}
+.project-discr {
+}
+/* .visually-hidden {
+} */
