--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,13 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: var(--secondary-color);
 }
 .section-title {
   font-size: 36px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: var(--secondary-color);
@@ -44,6 +46,7 @@ body {
 /* Header */
 .logo {
   font-family: 'Raleway', sans-serif;
+  font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
@@ -79,6 +82,7 @@ body {
 .hero-title {
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.02em;
   text-align: center;
   color: var(--third-color);
 }
@@ -131,4 +135,10 @@ body {
 .filter-btn:focus {
   color: var(--third-color);
   background-color: var(--pressed-state-color);
+}
+.project-discr {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--primary-text);
 }
